feat: install app

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
-    <button id="install-button" style="display: none">Installér appen</button>
-
     <!-- Startside med PWA-installation -->
     <div id="start-screen" class="screen">
       <h1>Magic Life Counter</h1>
@@ -33,7 +31,7 @@
 
     <!-- Spillepladen -->
     <!-- Tilfældig spiller knap -->
-    <div id="random-player-container">
+    <div id="random-player-container" class="hidden">
       <div id="arrow"></div>
       <button id="random-player-btn">🎲</button>
     </div>
