--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- Startside med PWA-installation -->
     <div id="start-screen" class="screen">
       <h1>Magic Life Counter</h1>
-      <button id="install-button">Installér som app</button>
+      <button id="install-button" style="display: none">
+        Installér som app
+      </button>
       <button id="start-game">Start spil</button>
     </div>
 
