--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Magic Life Counter</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/MagicTheGatheringApp/manifest.json" />
     <script type="module" src="js/gameManager.js"></script>
   </head>
   <body>
