--- a/index.html
+++ b/index.html
@@ -2,13 +2,38 @@
 <html lang="da">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Magic Life Counter</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <title>Modulær App</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="manifest" href="/MagicTheGatheringApp/manifest.json" />
-    <script type="module" src="js/gameManager.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="wrapper">
+      <nav id="navbar">
+        <button onclick="navigateTo('home')">Home</button>
+        <button onclick="navigateTo('game')">Game</button>
+      </nav>
+
+      <div id="content"></div>
+    </div>
+
+    <script type="module">
+      import { gameManager } from "./js/gameManager.js";
+
+      // Gør navigateTo tilgængelig globalt
+      window.navigateTo = function (page) {
+        gameManager.loadPage(page);
+      };
+
+      // Gør startGame tilgængelig globalt
+      window.startGame = function (playerCount) {
+        gameManager.loadPage("game", playerCount);
+      };
+
+      // Indlæs home som startside
+      gameManager.loadPage("home");
+    </script>
   </body>
 </html>
