--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <button id="menu-toggle" onclick="toggleNavbar()">☰</button>
 
       <nav id="navbar">
+        <button id="mute-button">🔊</button>
         <button onclick="navigateTo('home')">Home</button>
       </nav>
       <div id="overlay"></div>
